2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Flush.

2009-06-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs: fixed
	  "Bug 517032 - Crash when using search in assembly browser".

2009-06-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs: Fixed
	  "Bug 512533 - Assembly browser sometimes crashes".

2009-06-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs: Fixed
	  crash case reported in "Bug 513383 - Going to declaration of
	  extension method of System.Drawing.Bitmap crashes MD badly".

2009-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs:
	* MonoDevelop.AssemblyBrowser/ReferenceFolderNodeBuilder.cs:
	  Track assembly lookup APIs.

2009-04-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/DisplayBinding.cs: Track API
	  changes.

2009-04-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/DisplayBinding.cs: Track API
	  changes.

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomEventNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomFieldNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomMethodNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs:
	* MonoDevelop.AssemblyBrowser/DomPropertyNodeBuilder.cs:
	  Renamed PixbufService to ImageService.

2009-04-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomEventNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomFieldNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/DomMethodNodeBuilder.cs:
	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs:
	* MonoDevelop.AssemblyBrowser/DomPropertyNodeBuilder.cs: Track
	  API changes.

2009-04-17  Mike Kestner  <mkestner@novell.com>
