@@ -1,3 +1,15 @@
+2009-08-07  Mike Krüger  <mkrueger@novell.com>
+
+	* Makefile.am:
+	* gtk-gui/gui.stetic:
+	* MonoDevelop.AssemblyBrowser.csproj:
+	* MonoDevelop.AssemblyBrowser.addin.xml:
+	* MonoDevelop.AssemblyBrowser/DomTypeNodeBuilder.cs:
+	* MonoDevelop.AssemblyBrowser/AssemblyBrowserView.cs:
+	* MonoDevelop.AssemblyBrowser/AssemblyBrowserWidget.cs: Added
+	  find references command to the assembly browser context
+	  menu.
+
 2009-07-31  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* gtk-gui/gui.stetic: Flush.
